rubocop/examples/bad/style_OpMethod.rb
# When defining binary operators, name the parameter other(<< and [] are
#   exceptions to the rule, since their semantics are different). [link]

def +(other)
  # body omitted
end
